--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,17 +22,29 @@ services:
     mysql:
         image: 'mysql:8.0'
         ports:
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+        volumes:
+            - 'sailmysql:/var/lib/mysql'
+        networks:
+            - sail
+        healthcheck:
+            test: [ "CMD", "mysqladmin", "ping" ]
+    mailhog:
+        image: 'mailhog/mailhog:latest'
+        ports:
             - '${FORWARD_MAILHOG_PORT:-1025}:1025'
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
-    mailhog:
-      image: 'mailhog/mailhog:latest'
-      ports:
-        - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-        - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
-      networks:
-        - sail
 networks:
     sail:
         driver: bridge
+volumes:
+    sailmysql:
+        driver: local
